Added oo2core_8_win64.dll is missing error and disable open button

--- a/MHW Randomizer/Windows/MainWindow.xaml
+++ b/MHW Randomizer/Windows/MainWindow.xaml
@@ -44,6 +44,7 @@
                     <StackPanel Margin="0 4 4 4">
                         <Button Content="Open Chunk Folder" 
                                 Margin="3"
+                                IsEnabled="{Binding OpenFolderIsEnabled, Source={x:Static local:IoC.Randomizer}}"
                                 Command="{Binding OpenCommand, Source={x:Static local:IoC.Randomizer}}"/>
                         <Button Content="Randomize"
                                 Margin="3"
