--- a/MHW Randomizer/Windows/MainWindow.xaml
+++ b/MHW Randomizer/Windows/MainWindow.xaml
@@ -6,7 +6,7 @@
         xmlns:local="clr-namespace:MHW_Randomizer"
         mc:Ignorable="d"
         Closing="Window_Closing"
-        Title="MHW Randomizer - v1.0.3" Height="560" Width="620"
+        Title="MHW Randomizer - v1.0.4" Height="560" Width="620"
         MinHeight="560"
         MinWidth="620">
     <Grid>
@@ -68,6 +68,11 @@
                 <TabItem Header="Quests">
                     <local:Quest/>
                 </TabItem>
+                
+                <TabItem Header="Monsters">
+                    <local:Monster/>
+                </TabItem>
+                
                 <TabItem Header="Armour">
                     <local:Armour/>
                 </TabItem>
