--- a/MHW Randomizer/Controls/Monster.xaml
+++ b/MHW Randomizer/Controls/Monster.xaml
@@ -29,7 +29,7 @@
                     <CheckBox Content="Random Monster Status Effect"
                               IsChecked="{Binding RandomMonsterAttackStatus, Source={x:Static local:IoC.Settings}}"
                               Margin="5, 10, 5, 4"
-                              ToolTip="Gives the monsters a random status and chance to inflict the player with on some attacks &#xA;(eg. bleed, paralysis, stun, etc (Some monster don't get a status))(Will keep stun value)"
+                              ToolTip="Gives the monsters a random status and chance to inflict the player with on some attacks (30% chance to add it to an attack) &#xA;(eg. bleed, paralysis, stun, etc (Some monster don't get a status))(Will keep stun value)"
                               ToolTipService.ShowDuration="10000"/>
                     <CheckBox Content="Different Status Effect Per Attack"
                               IsChecked="{Binding EachAttackDifferentStatus, Source={x:Static local:IoC.Settings}}"
@@ -48,12 +48,12 @@
                     <CheckBox Content="Random Monster Attack Element"
                               IsChecked="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
                               Margin="5, 4"
-                              ToolTip="Gives the monsters a random attack element for some of their attacks &#xA;(Inflicts stuff like frostblight, and burn)(Also increases the monster's attack a bit)"
+                              ToolTip="Gives the monsters a random attack element for some of their attacks (30% chance to add it to an attack) &#xA;(Inflicts stuff like frostblight, and burn)(Also increases the monster's attack a bit)"
                               ToolTipService.ShowDuration="10000"/>
                     <CheckBox Content="Increase Element Damage"
                               IsChecked="{Binding IncreaseElementPower, Source={x:Static local:IoC.Settings}}"
                               Margin="12, 4"
-                              ToolTip="Increases the random power from 10-30 to 20-50"
+                              ToolTip="Increases the random power from 10-30 to 20-50 (Also increases the chance for blights and burn to be inflicted)"
                               IsEnabled="{Binding RandomMonsterElement, Source={x:Static local:IoC.Settings}}"
                               ToolTipService.ShowDuration="10000"/>
                 </StackPanel>
